--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -42,9 +42,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="/iglesias/">Iglesias</a></li>
-            <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li> -->
             <li class="nav-item"><a class="nav-link" href="/horarios/">Horarios</a></li>
             <li class="nav-item"><a class="nav-link" href="/calendario/">Calendario</a></li>
+            {% if user.is_superuser %}
+                <li class="nav-item"><a class="nav-link" href="/admin/">Administración</a></li>
+            {% endif %}
             </ul>
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
