--- a/parroquiaproject/sitio/templates/horarios.html
+++ b/parroquiaproject/sitio/templates/horarios.html
@@ -77,7 +77,7 @@
                                     <th>Actividad</th>
                                     <th>Hora</th>
                                     <th>Iglesia</th>
-                                    <th>Acciones</th>
+                               <!-- <th>Acciones</th> -->
                                 </tr>
                             </thead>
                             <tbody>
@@ -101,10 +101,10 @@
                                     </td>
                                     <td>{{ actividad.hora }}</td>
                                     <td>{{ actividad.iglesia.nombre }}</td>
-                                    <td>
+                               <!-- <td>
                                         <button class="btn btn-sm btn-warning me-1">✏️</button>
-                                        <button class="btn btn-sm btn-danger">🗑️</button>
-                                    </td>
+                                        <button class="btn btn-sm btn-danger">🗑️</button> 
+                                    </td> -->
                                 </tr>
                                 {% endfor %}
                             </tbody>
