--- a/parroquiaproject/sitio/templates/registration/login.html
+++ b/parroquiaproject/sitio/templates/registration/login.html
@@ -46,6 +46,12 @@
                             <a href="{% url 'signup' %}">Regístrate aquí</a>
                         </small>
                     </div>
+                    <!-- Link a cambiar contraseña -->
+                    <div class="text-center mt-3">
+                        <small>¿Olvidaste tu contraseña?
+                            <a href="{% url 'password_reset_custom' %}">Recupérala aquí</a>
+                        </small>
+                    </div>
                 </div>
             </div>
 
