Update password_reset - Mejoras visuales

--- a/parroquiaproject/sitio/templates/registration/login.html
+++ b/parroquiaproject/sitio/templates/registration/login.html
@@ -36,7 +36,7 @@
 
                         <!-- Botón -->
                         <div class="d-grid">
-                            <button type="submit" class="btn" style="background-color:#5DADE2; color:white;"">Iniciar sesión</button>
+                            <button type="submit" class="btn" style="background-color:#5DADE2; color:white;">Iniciar sesión</button>
                         </div>
                     </form>
 
