--- a/parroquiaproject/sitio/templates/registration/password_reset_email_custom.html
+++ b/parroquiaproject/sitio/templates/registration/password_reset_email_custom.html
@@ -1,7 +1,9 @@
 {% autoescape off %}
-<p>Hola {{ user.get_username }},</p>
+<p>Hola {{ user.username }},</p>
 <p>Recibiste este correo porque solicitaste restablecer tu contraseña.</p>
 <p>Haz clic en el siguiente enlace para cambiar tu contraseña:</p>
-<p><a href="{{ reset_link }}">{{ reset_link }}</a></p>
+<p style="text-align:center; margin: 20px 0;">
+  <a href="{{ reset_link }}" style="background-color:#28a745; color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">Cambiar contraseña</a>
+</p>
 <p>Si no solicitaste este cambio, ignora este correo.</p>
 {% endautoescape %}
