--- a/parroquiaproject/sitio/templates/registration/login.html
+++ b/parroquiaproject/sitio/templates/registration/login.html
@@ -24,7 +24,7 @@
 
                         <!-- Campo usuario -->
                         <div class="mb-3">
-                            <label for="{{ form.username.id_for_label }}" class="form-label">Usuario</label>
+                            <label for="{{ form.username.id_for_label }}" class="form-label">Usuario o correo</label>
                             {{ form.username|add_class:"form-control" }}
                         </div>
 
