--- a/parroquiaproject/sitio/templates/dashboard.html
+++ b/parroquiaproject/sitio/templates/dashboard.html
@@ -10,7 +10,7 @@
     <h2 
         class="mb-3">Bienvenido, {{ user.username }} 👋 
         <button class="btn btn-warning mt-2 mt-sm-0 float-end" onclick="window.location.href='/autorizacion/'">
-        👤 Identificate
+        👤 Borrar Usuario
         </button>
     </h2>
     <p>En esta sección puedes ver tus suscripciones:</p>
