--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -11,12 +11,40 @@
     box-shadow: 0 2px 5px rgba(0,0,0,.1);
     margin-bottom: 1rem;
   }
+  .img-fija {
+    width: 400px ;
+    height: 300px ;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="container mt-4">
-
+  <div class="container my-4">
+    <iframe id="versiculo-del-dia" src="https://www.bibliatodo.com/es/online/versiculo-del-dia-texto-2" style="width: 100%; height: 20vh;" frameborder="0" scrolling="no"></iframe>
+    <h3>🎶 Música recomendada</h3>
+    <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+      <!-- Spotify -->
+      <iframe style="border-radius:12px; flex: 1 1 300px;"
+        src="https://open.spotify.com/embed/playlist/6sc0V02fkbMDw8X5deDuN2?utm_source=generator&theme=0"
+        width="100%" height="152" frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
+    
+      <!-- YouTube -->
+      <iframe style="flex: 1 1 300px; height: 152px;"
+        src="https://www.youtube.com/embed/videoseries?list=PLbsXiQOTnFUmPJf_CNV3vtELkeIiF58e4"
+        width="100%" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+    </div>
+   </div>
   <h2>
     Noticias & Anuncios
     <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse" data-bs-target="#formNoticia">
@@ -48,7 +76,7 @@
       <p class="card-text">{{ noticia.descripcion }}</p>
 
       {% if noticia.imagen %}
-        <img src="{{ noticia.imagen.url }}" class="img-fluid rounded mb-3" alt="Imagen noticia">
+      <img src="{{ noticia.imagen.url }}" alt="Imagen noticia" class="img-fija mb-3">
       {% endif %}
 
       <!-- Acciones -->
