--- a/parroquiaproject/sitio/templates/autorizacion.html
+++ b/parroquiaproject/sitio/templates/autorizacion.html
@@ -6,9 +6,12 @@
 <div class="card card-body shadow-sm w-100">
     <h4>Formulario de Autorización</h4>
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success mt-2">Enviar</button>
-    </form>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div class="d-flex gap-2">
+        <button type="submit" name="add" class="btn btn-success">Agregar permiso</button>
+        <button type="submit" name="remove" class="btn btn-danger">Quitar permiso</button>
+    </div>
+</form>
 </div>
 {% endblock %}
