Fix email & Update btn design (iglesia & noticia)

--- a/parroquiaproject/sitio/templates/iglesias.html
+++ b/parroquiaproject/sitio/templates/iglesias.html
@@ -69,11 +69,11 @@
           {% if request.user.is_authenticated and iglesia in request.user.perfil_iglesias.iglesias_suscripto.all %}
               <button class="btn btn-purple">Suscripto</button>
           {% else %}
-              <a href="{% url 'suscribirse_iglesia' iglesia.id %}" class="btn btn-primary">Suscribirse</a>
+              <a href="{% url 'suscribirse_iglesia' iglesia.id %}" class="btn btn-warning">Suscribirse</a>
           {% endif %}
 
           {% if request.user.is_authenticated and iglesia in request.user.perfil_iglesias.iglesias_admin.all %}
-            <button class="btn btn-warning"
+            <button class="btn btn-primary"
               data-bs-toggle="modal"
               data-bs-target="#editarIglesia{{ iglesia.id }}">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 17 17">
@@ -90,7 +90,7 @@
                 onclick="return confirm('¿Seguro que deseas eliminar {{ iglesia.nombre }}?')">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 17 17">
                   <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
-                </svg> Eliminar
+                </svg>
               </button>
             </form>
           {% endif %}
