--- a/parroquiaproject/sitio/templates/configuracion_delete_email.html
+++ b/parroquiaproject/sitio/templates/configuracion_delete_email.html
@@ -9,6 +9,7 @@
 <div style="padding-left: 20px; margin: 20px 0;">
   <a href="{{ delete_link }}" style="
     background-color: #dc3545;
+    color: white;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
